# tabgroups

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  config.example.toml  justfile  pyproject.toml  ruff.toml
docs/: PROGRESS.md
docs/lessons/: 2026-06-15-01-classify-cache.md  2026-06-15-02-classify-readability-refactor.md  2026-06-15-03-classify-rate-limit.md
docs/plans/: 2026-06-15-01-classify-cache.md  2026-06-15-03-classify-rate-limit.md
docs/specs/: 2026-06-15-01-classify-cache.md  2026-06-15-03-classify-rate-limit.md  2026-06-18-01-close-grouped-tabs.md
src/brave_tabgroups/: cli.py
src/tabgroups/: __init__.py  cache.py  classify.py  cli.py  config.py  export.py  models.py  render.py  stats.py
src/tabgroups_export/: cli.py
