[project]
name = "brave-tabgroups"
version = "0.1.0"
description = "Export Brave (Chromium) tab groups from the on-disk SNSS session file"
readme = "README.md"
authors = [
    { name = "Eli Yip", email = "yezi.2022@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
brave-tabgroups = "brave_tabgroups:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
