[project]
name = "tabgroups-export"
version = "0.1.0"
description = "Export Chromium browser tab groups from the on-disk SNSS session file"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Eli Yip", email = "yezi.2022@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
tabgroups-export = "tabgroups_export:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
