[project]
name = "tabgroups"
version = "0.1.0"
description = "Read a Chromium browser's tab groups from its on-disk session file, then export or LLM-classify them"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Eli Yip", email = "yezi.2022@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "any-llm-sdk>=1.17.0",
    "diskcache>=5.6.3",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "tldextract>=5.3.1",
    "typer>=0.26.7",
]

[project.scripts]
tabgroups = "tabgroups:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
